# infostealer-monitor

./: .gitignore  Cargo.toml  README.md
src/: check_keyword.rs  error.rs  main.rs
