[package]
name = "stealer-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
encoding_rs = "0.8.34"
grammers-client = "0.6.0"
grammers-mtsender = "0.5.1"
grammers-session = "0.5.2"
lazy-regex = "3.2.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt"] }

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
incremental = true

[profile.release]
incremental = true
lto = true
strip = true
panic = "abort"
codegen-units = 1
